Updates from Overleaf

--- a/res/preambule.sty
+++ b/res/preambule.sty
@@ -47,9 +47,11 @@ tikz
 \renewcommand\tabularxcolumn[1]{C{#1}}
 \usepackage{afterpage}
 \usepackage{gensymb}
+\usepackage{tocloft}
+\usepackage{xstring}
 
 \usepackage{res/macros}
-
-
-
+ 
 \endinput
+
+ 
