--- a/sections/section3-3.tex
+++ b/sections/section3-3.tex
@@ -1,10 +1,10 @@
 % Experimentos e Resultados
 
-\pgfplotstableread{data/sec1s1tbl13a.txt}{\tblo}
-\pgfplotstableread{data/sec1s1tbl13b.txt}{\tblp}
-\pgfplotstableread{data/sec1s1tbl13c.txt}{\tblq}
-\pgfplotstableread{data/sec1s1tbl13d.txt}{\tblr}
-\pgfplotstableread{data/sec1s1tbl13e.txt}{\tbls}
+\pgfplotstableread{data/sect3s3/sec3s3tbl13a.txt}{\tblo}
+\pgfplotstableread{data/sect3s3/sec3s3tbl13b.txt}{\tblp}
+\pgfplotstableread{data/sect3s3/sec3s3tbl13c.txt}{\tblq}
+\pgfplotstableread{data/sect3s3/sec3s3tbl13d.txt}{\tblr}
+\pgfplotstableread{data/sect3s3/sec3s3tbl13e.txt}{\tbls}
 
 \subsection{3° Experimento: Avaliação do Custo Computacional em Função de Variação da Dimensão}
     \subsubsection{Função Analisada}
