Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt,a4paper]{article}
 
 \usepackage{res/preambule}
+\usepackage{res/macros}
 
 \NewDocumentCommand{\nomeAluno}{}{Charles Quirino Pimenta}
 \NewDocumentCommand{\nomeProfessor}{}{Dr. Rodney Saldanha}
