--- a/sections/section2.tex
+++ b/sections/section2.tex
@@ -198,8 +198,7 @@ A Hessiana dessa função é descrita como:
 det(H)=(1+6*a(x_1-1))*( 1+6*a(x_2-1))*\ldots*(1+6*a(x_{n-1}-1))*(1+6*a(x_{n}-1))
 \end{equation*}
 
-No intuito de obter uma Hessiana semi-definida positiva, ou seja, no caso onde não há singularidade, deve-se obter valores de que respeitem a seguinte condição: 
-{\centering\\$det(H)\geq 0$.\\}
+No intuito de obter uma Hessiana semi-definida positiva, ou seja, no caso onde não há singularidade, deve-se obter valores de que respeitem a seguinte condição: $det(H)\geq 0$.
 O valor do parâmetro para função \ref{eq:gradquafuntst} foi $a = 0.0263$. 
 
 Os gráficos dessa função, do gradiente e das curvas de nível considerando duas variáveis são ilustrados abaixo:
@@ -216,11 +215,13 @@ Os gráficos dessa função, do gradiente e das curvas de nível considerando du
 \end{figure}
 \FloatBarrier
 
-Ao observar os gráficos ilustrados nas figuras 9 e 10 é fácil notar que a função apresentada em (\ref{eq:quafuntst}) é uma função não quadrática perfeita devido ao parâmetro $a = 0.0263$, não nulo (nesse caso). Além disso, o mínimo dessa função depende do valor do parâmetro a.
+Ao observar os gráficos ilustrados nas figuras 9 e 10 é fácil notar que a função apresentada em (\ref{eq:quafuntst}) é uma função não quadrática perfeita devido ao parâmetro $a = 0.0263$, não nulo (nesse caso). Além disso, o mínimo dessa função depende do valor do parâmetro $a$.
 
 \subsection{Quinta Função de Teste}\label{sec:quifun}
 
+A quinta função de teste é uma função com duas variáveis proveniente do problema de Rosen-Suzuki. Esse problema é considerado um problema de otimização restrito cuja função pseudo-objetivo pode ser considerada uma função quadrática. Vale ressaltar que a função pseudo-objetivo é dada pela soma da função objetivo com a função de penalidade que traduz as restrições não lineares, fazendo com que as soluções fornecidas por algum processo de otimização sejam factíveis.
 
+Os gráficos dessa função, do gradiente e das curvas de nível considerando duas variáveis são ilustrados abaixo:
 
 \subsection{Sexta Função de Teste}\label{sec:sexfun}
 
