--- a/sections/section3-4.tex
+++ b/sections/section3-4.tex
@@ -1,9 +1,9 @@
 % Experimentos e Resultados
 
-\pgfplotstableread{data/sec1s1tbl14a.txt}{\tblt}
-\pgfplotstableread{data/sec1s1tbl14b.txt}{\tblu}
-\pgfplotstableread{data/sec1s1tbl15a.txt}{\tblv}
-\pgfplotstableread{data/sec1s1tbl15b.txt}{\tblx}
+\pgfplotstableread{data/sect3s4/sec3s4tbl14a.txt}{\tblt}
+\pgfplotstableread{data/sect3s4/sec3s4tbl14b.txt}{\tblu}
+\pgfplotstableread{data/sect3s4/sec3s4tbl15a.txt}{\tblv}
+\pgfplotstableread{data/sect3s4/sec3s4tbl15b.txt}{\tblx}
 
 \subsection{4° Experimento: Técnica da Seção Áurea - Avaliação Direta da Função e Aproximações Quadráticas da Função a Cada Iteração}
     \subsubsection{Primeira Função Analisada}
