--- a/sections/section3-5.tex
+++ b/sections/section3-5.tex
@@ -1,7 +1,7 @@
 % Experimentos e Resultados
 
-\pgfplotstableread{data/sec1s1tbl16a.txt}{\tblz}
-\pgfplotstableread{data/sec1s1tbl16b.txt}{\tblw}
+\pgfplotstableread{data/sect3s5/sec3s5tbl16a.txt}{\tblz}
+\pgfplotstableread{data/sect3s5/sec3s5tbl16b.txt}{\tblw}
 
 \subsection{5° Experimento: Avaliação dos Métodos Quase-Newton em Problemas com Hessiana Singular}
     \subsubsection{Função Analisada}
