--- a/sections/section3-6_1.tex
+++ b/sections/section3-6_1.tex
@@ -1,12 +1,14 @@
-\pgfplotstableread{data/sec1s1tbl17_tEnd.txt}{\tblAa}
-\pgfplotstableread{data/sec1s1tbl17_N_Iter.txt}{\tblAb}
-\pgfplotstableread{data/sec1s1tbl17_N_Evals.txt}{\tblAc}
-\pgfplotstableread{data/sec1s1tbl17_Erro_Xsol_P.txt}{\tblAd}
-\pgfplotstableread{data/sec1s1tbl17_Erro_F_P.txt}{\tblAe}
-\pgfplotstableread{data/sec1s1tbl17_DFP_raw.txt}{\tblADFP}
-\pgfplotstableread{data/sec1s1tbl17_BFGS_raw.txt}{\tblABFGS}
-\pgfplotstableread{data/sec1s1tbl17_Huang_raw.txt}{\tblAHuang}
-\pgfplotstableread{data/sec1s1tbl17_Biggs_raw.txt}{\tblABiggs}
+% Experimentos e Resultados
+
+\pgfplotstableread{data/sect3s6s1/sec1s1tbl17_tEnd.txt}{\tblAa}
+\pgfplotstableread{data/sect3s6s1/sec1s1tbl17_N_Iter.txt}{\tblAb}
+\pgfplotstableread{data/sect3s6s1/sec1s1tbl17_N_Evals.txt}{\tblAc}
+\pgfplotstableread{data/sect3s6s1/sec1s1tbl17_Erro_Xsol_P.txt}{\tblAd}
+\pgfplotstableread{data/sect3s6s1/sec1s1tbl17_Erro_F_P.txt}{\tblAe}
+\pgfplotstableread{data/sect3s6s1/sec1s1tbl17_DFP_raw.txt}{\tblADFP}
+\pgfplotstableread{data/sect3s6s1/sec1s1tbl17_BFGS_raw.txt}{\tblABFGS}
+\pgfplotstableread{data/sect3s6s1/sec1s1tbl17_Huang_raw.txt}{\tblAHuang}
+\pgfplotstableread{data/sect3s6s1/sec1s1tbl17_Biggs_raw.txt}{\tblABiggs}
 
 \begin{minipage}[h!]{\linewidth}            
     \centering
