--- a/sections/section3-6_2.tex
+++ b/sections/section3-6_2.tex
@@ -1,12 +1,14 @@
-\pgfplotstableread{data/sec1s1tbl18_tEnd.txt}{\tblBa}
-\pgfplotstableread{data/sec1s1tbl18_N_Iter.txt}{\tblBb}
-\pgfplotstableread{data/sec1s1tbl18_N_Evals.txt}{\tblBc}
-\pgfplotstableread{data/sec1s1tbl18_Erro_Xsol_P.txt}{\tblBd}
-\pgfplotstableread{data/sec1s1tbl18_Erro_F_P.txt}{\tblBe}
-\pgfplotstableread{data/sec1s1tbl18_DFP_raw.txt}{\tblBDFP}
-\pgfplotstableread{data/sec1s1tbl18_BFGS_raw.txt}{\tblBBFGS}
-\pgfplotstableread{data/sec1s1tbl18_Huang_raw.txt}{\tblBHuang}
-\pgfplotstableread{data/sec1s1tbl18_Biggs_raw.txt}{\tblBBiggs}
+% Experimentos e Resultados
+
+\pgfplotstableread{data/sect3s6s2/sec1s1tbl18_tEnd.txt}{\tblBa}
+\pgfplotstableread{data/sect3s6s2/sec1s1tbl18_N_Iter.txt}{\tblBb}
+\pgfplotstableread{data/sect3s6s2/sec1s1tbl18_N_Evals.txt}{\tblBc}
+\pgfplotstableread{data/sect3s6s2/sec1s1tbl18_Erro_Xsol_P.txt}{\tblBd}
+\pgfplotstableread{data/sect3s6s2/sec1s1tbl18_Erro_F_P.txt}{\tblBe}
+\pgfplotstableread{data/sect3s6s2/sec1s1tbl18_DFP_raw.txt}{\tblBDFP}
+\pgfplotstableread{data/sect3s6s2/sec1s1tbl18_BFGS_raw.txt}{\tblBBFGS}
+\pgfplotstableread{data/sect3s6s2/sec1s1tbl18_Huang_raw.txt}{\tblBHuang}
+\pgfplotstableread{data/sect3s6s2/sec1s1tbl18_Biggs_raw.txt}{\tblBBiggs}
 
 
 \begin{minipage}[h!]{\linewidth}
