--- a/sections/section3-6_3.tex
+++ b/sections/section3-6_3.tex
@@ -1,12 +1,14 @@
-\pgfplotstableread{data/sec1s1tbl19_tEnd.txt}{\tblCa}
-\pgfplotstableread{data/sec1s1tbl19_N_Iter.txt}{\tblCb}
-\pgfplotstableread{data/sec1s1tbl19_N_Evals.txt}{\tblCc}
-\pgfplotstableread{data/sec1s1tbl19_Erro_Xsol_P.txt}{\tblCd}
-\pgfplotstableread{data/sec1s1tbl19_Erro_F_P.txt}{\tblCe}
-\pgfplotstableread{data/sec1s1tbl19_DFP_raw.txt}{\tblCDFP}
-\pgfplotstableread{data/sec1s1tbl19_BFGS_raw.txt}{\tblCBFGS}
-\pgfplotstableread{data/sec1s1tbl19_Huang_raw.txt}{\tblCHuang}
-\pgfplotstableread{data/sec1s1tbl19_Biggs_raw.txt}{\tblCBiggs}
+% Experimentos e Resultados
+
+\pgfplotstableread{data/sect3s6s3/sec1s1tbl19_tEnd.txt}{\tblCa}
+\pgfplotstableread{data/sect3s6s3/sec1s1tbl19_N_Iter.txt}{\tblCb}
+\pgfplotstableread{data/sect3s6s3/sec1s1tbl19_N_Evals.txt}{\tblCc}
+\pgfplotstableread{data/sect3s6s3/sec1s1tbl19_Erro_Xsol_P.txt}{\tblCd}
+\pgfplotstableread{data/sect3s6s3/sec1s1tbl19_Erro_F_P.txt}{\tblCe}
+\pgfplotstableread{data/sect3s6s3/sec1s1tbl19_DFP_raw.txt}{\tblCDFP}
+\pgfplotstableread{data/sect3s6s3/sec1s1tbl19_BFGS_raw.txt}{\tblCBFGS}
+\pgfplotstableread{data/sect3s6s3/sec1s1tbl19_Huang_raw.txt}{\tblCHuang}
+\pgfplotstableread{data/sect3s6s3/sec1s1tbl19_Biggs_raw.txt}{\tblCBiggs}
 
 \begin{minipage}[h!]{\linewidth}
     \centering
