--- a/sections/section3-6_4.tex
+++ b/sections/section3-6_4.tex
@@ -1,12 +1,12 @@
-\pgfplotstableread{data/sec1s1tbl20_tEnd.txt}{\tblDa}
-\pgfplotstableread{data/sec1s1tbl20_N_Iter.txt}{\tblDb}
-\pgfplotstableread{data/sec1s1tbl20_N_Evals.txt}{\tblDc}
-\pgfplotstableread{data/sec1s1tbl20_Erro_Xsol_P.txt}{\tblDd}
-\pgfplotstableread{data/sec1s1tbl20_Erro_F_P.txt}{\tblDe}
-\pgfplotstableread{data/sec1s1tbl20_DFP_raw.txt}{\tblDDFP}
-\pgfplotstableread{data/sec1s1tbl20_BFGS_raw.txt}{\tblDBFGS}
-\pgfplotstableread{data/sec1s1tbl20_Huang_raw.txt}{\tblDHuang}
-\pgfplotstableread{data/sec1s1tbl20_Biggs_raw.txt}{\tblDBiggs}
+\pgfplotstableread{data/sect3s6s4/sec1s1tbl20_tEnd.txt}{\tblDa}
+\pgfplotstableread{data/sect3s6s4/sec1s1tbl20_N_Iter.txt}{\tblDb}
+\pgfplotstableread{data/sect3s6s4/sec1s1tbl20_N_Evals.txt}{\tblDc}
+\pgfplotstableread{data/sect3s6s4/sec1s1tbl20_Erro_Xsol_P.txt}{\tblDd}
+\pgfplotstableread{data/sect3s6s4/sec1s1tbl20_Erro_F_P.txt}{\tblDe}
+\pgfplotstableread{data/sect3s6s4/sec1s1tbl20_DFP_raw.txt}{\tblDDFP}
+\pgfplotstableread{data/sect3s6s4/sec1s1tbl20_BFGS_raw.txt}{\tblDBFGS}
+\pgfplotstableread{data/sect3s6s4/sec1s1tbl20_Huang_raw.txt}{\tblDHuang}
+\pgfplotstableread{data/sect3s6s4/sec1s1tbl20_Biggs_raw.txt}{\tblDBiggs}
 
 \begin{minipage}[h!]{\linewidth}
     \centering
