--- a/res/preambule.sty
+++ b/res/preambule.sty
@@ -1,57 +1,43 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{preambule}[2023/05/05 Pacote de preâmbulo de documento]
 
-\usepackage[brazil]{babel}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{lmodern}
 \usepackage{ae}
-\usepackage{xargs}
-\usepackage{indentfirst}
-\usepackage{titlesec}
-\usepackage[margin=2cm]{geometry}
-\usepackage{amsthm,amssymb,amsfonts,amsmath}
-\usepackage{psfrag}
+\usepackage{afterpage}
+\usepackage{amsfonts}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{amsthm}
+\usepackage{array}
+\usepackage[brazil]{babel}
 \usepackage{booktabs}
-\usepackage{multirow}
-\usepackage{import}
-\usepackage{enumitem}
-\usepackage{colortbl,booktabs}
-\usepackage{enumerate}
-\usepackage{enumitem}
+\usepackage{caption}
+\usepackage{colortbl}
+\usepackage[utf8]{inputenc}
 \usepackage{csquotes}
+\usepackage{enumitem}
+\usepackage{enumerate}
+\usepackage[T1]{fontenc}
+\usepackage{float}
+\usepackage{gensymb}
+\usepackage[margin=2cm]{geometry}
+\usepackage{graphicx}
+\usepackage{import}
+\usepackage{indentfirst}
+\usepackage{lmodern}
 \usepackage{multicol}
-% Para plotar tabelas
+\usepackage{multirow}
 \usepackage{pgfplots}
 \usepackage{pgfplotstable}
-\usepackage{booktabs}
-\usepackage{array}
-\usepackage{colortbl}
-\usepackage{booktabs}
-\usepackage{array}
 \usepackage{placeins}
-\usepackage{
-tikz,
-relsize,
-amsmath,
-booktabs,
-tikz
-}
-\usepackage{caption}
+\usepackage{psfrag}
+\usepackage{relsize}
+\usepackage{ragged2e}
 \usepackage{subcaption}
-\usepackage{graphicx}
-\usepackage{float}
-\restylefloat{table}
-\usepackage{tabularx,ragged2e,booktabs,caption}
-\newcolumntype{C}[1]{>{\Centering}m{#1}}
-\renewcommand\tabularxcolumn[1]{C{#1}}
-\usepackage{afterpage}
-\usepackage{gensymb}
+\usepackage{tabularx}
+\usepackage{tikz}
+\usepackage{titlesec}
 \usepackage{tocloft}
+\usepackage{xargs}
 \usepackage{xstring}
-
-\usepackage{res/macros}
  
-\endinput
-
- 
+\endinput 
